2004-03-15  Andrew Cagney  <cagney@redhat.com>

	* infrun.c (handle_step_into_function, step_over_function): Only
	update and use STEP_FRAME_ID when the system is using legacy
	frames.  Update comments.

2004-03-14  Mark Kettenis  <kettenis@gnu.org>

	* amd64-linux-tdep.h: Remove file.
	* amd64-linux-tdep.c: Don't include "inferior.h" and
	"amd64-linux-tdep.h".  Include "frame.h" and "solib-svr4.h".
	(USER_R15, USER_R14, USER_R13, USER_R12, USER_RBP, USER_RBX)
	(USER_R11, USER_R10, USER_R9, USER_R8, USER_RAX, USER_RCX)
	(USER_RDX, USER_RSI, USER_RDI, USER_RIP, USER_CS, USER_EFLAGS)
	(USER_RSP, USER_SS, USER_DS, USER_ES, USER_FS, USER_GS): Remove
	macros.
	(user_to_gdb_regmap): Remove variable.
	(amd64_linux_gregset_reg_offset): New variable.
	(amd64_core_fns): Remove variable.
	(fetch_core_registers): Remove function.
	(amd64_linux_supply_gregset, amd64_linux_fill_gregset): Remove
	functions.
	(_initialize_amd64_linux_tdep): Don't set add_core_fns.
	* amd64-linux-nat.c: Don't include "amd64-linux-tdep.h".
	* Makefile.in (amd64_linux_tdep_h): Remove.
	(amd64-linux-nat.o): Update dependencies.
	(amd64-linux-tdep.o): Update dependencies.

	* amd64-linux-nat.c (GETFPREGS_SUPPLIES): Remove macro.
	(fetch_regs, fetch_fpregs, store_regs, store_fpregs): Remove
	functions.
	(fetch_inferior_registers, store_inferior_registers): Rewrite.

	* amd64-tdep.h (amd64_fill_fxsave): Remove prototype.
	* amd64-tdep.c (amd64_fill_fxsave): Remove function.

2004-03-14  Daniel Jacobowitz  <drow@mvista.com>

	* dwarf2read.c (read_structure_type): Rename from
	read_structure_scope.  Don't create a symbol or call process_die. 
	Return immediately if die->type is set.  Call read_type_die before
	dwarf2_add_member_fn.
	(process_structure_scope): New function.
	(read_enumeration_type, process_enumeration_scope): New functions,
	broken out from read_enumeration.  Don't create the enumeration
	type if it has already been created.
	(read_enumeration): Removed.