@@ -1,3 +1,8 @@
+2004-03-15  Kevin Buettner  <kevinb@redhat.com>
+
+	* frv-tdep.c (frv_call_dummy_words): Delete.
+	(frv_frame_unwind_cache): Delete unused variable, ``prev_sp''.
+
 2004-03-15  Andrew Cagney  <cagney@redhat.com>
 
 	* infrun.c (handle_step_into_function, step_over_function): Only
